src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Data_quality_feedback__c</fullName>
        <label>Data Quality Feedback</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partcipation information missing</fullName>
                </value>
                <value>
                    <fullName>Address not complete</fullName>
                </value>
                <value>
                    <fullName>Account Duplicated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing city found in another state</fullName>
                </value>
                <value>
                    <fullName>Shipping city found in another state</fullName>
                </value>
                <value>
                    <fullName>Billing city not found in our Database</fullName>
                </value>
                <value>
                    <fullName>Shipping city not found in our Database</fullName>
                </value>
                <value>
                    <fullName>Billing Address not found by address doctor</fullName>
                </value>
                <value>
                    <fullName>Shipping Address not found by address doctor</fullName>
                </value>
                <value>
                    <fullName>Billing city found in another country</fullName>
                </value>
                <value>
                    <fullName>Shipping city found in another country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_quality_history__c</fullName>
        <label>Data quality history</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Organisation_Status_attained__c</fullName>
        <label>Date Organisation Status attained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_clearance__c</fullName>
        <description>Date due diligence performed last clearance on an account</description>
        <label>Date of last clearance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_most_recent_name_change__c</fullName>
        <label>Date of most recent name change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Type__c</fullName>
        <description>IEC - default payment type</description>
        <label>Default Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>ICH</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_date__c</fullName>
        <label>Default date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Std_Instruction__c</fullName>
        <inlineHelpText>Latest year expected.</inlineHelpText>
        <label>Authorized Signatories</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Remarks__c</fullName>
        <description>for due diligence process</description>
        <label>Due Diligence Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Status__c</fullName>
        <description>For due diligence process</description>
        <label>Due Diligence Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Sanctioned. Please contact compliance</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Additional_SAP_Nr__c</fullName>
        <description>E&amp;F CRM Project. Holds E&amp;F additional SAP number, that might not match the SAP number from other departments.</description>
        <inlineHelpText>Temporary duplicate bill-to (4xxxx) SAP number</inlineHelpText>
        <label>E&amp;F Additional SAP Nr.</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Airline_ID__c</fullName>
        <description>E&amp;F CRM Project. Front end Airline ID number (legacy) in CRM</description>
        <inlineHelpText>E&amp;F AL_ID number</inlineHelpText>
        <label>E&amp;F Airline ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Allow_Billing_Agreements__c</fullName>
        <description>Field allowed to be updated only by E&amp;F Business Development Manager. This field controls whether E&amp;F Billing Agreements are allowed (occasionally with management&apos;s approval) for the Account or not.</description>
        <inlineHelpText>Controls whether the creation of Billing Agreements on this Account is allowed or not. With &quot;Allowed with Approval&quot; selection, the E&amp;F management must approval creation of Billing Agreements before they are activated.</inlineHelpText>
        <label>E&amp;F Allow Billing Agreements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_Allow_Billing_Agreements</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Annual_Revenue_USD__c</fullName>
        <description>E&amp;F Project. Annual Revenue for E&amp;F, might be different to Standard Annual Revenue. Allways computed on USD</description>
        <label>E&amp;F Annual Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EF_Client_Services_Specialist_Email__c</fullName>
        <formula>EF_Client_Services_Specialist__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;F Client Services Specialist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Client_Services_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>E&amp;F Project. Defines who is the E&amp;F specialist for the account.</description>
        <label>E&amp;F Client Services Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EFAccountClientServicesSpecialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Effective_Date__c</fullName>
        <description>E&amp;F CRM Project
(EF-864) Add airline status details.
 when E&amp;F Status gets inactive, this field becomes mandatory.</description>
        <label>E&amp;F Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EF_Legacy_Code__c</fullName>
        <description>E&amp;F Project. This field allows easy identification with E&amp;F clients.</description>
        <label>E&amp;F Legacy Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Level__c</fullName>
        <description>Client level clasification within E&amp;F (1, for very good clients)</description>
        <inlineHelpText>Scale goes from 1 to 3. Being 1 the best clasification</inlineHelpText>
        <label>E&amp;F Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Liquidator_Administrator__c</fullName>
        <description>E&amp;F CRM Project 
(EF-864) Add airline status details. 
when E&amp;F Status gets inactive, this field becomes mandatory.</description>
        <label>Liquidator/Administrator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EF_Remitter_details__c</fullName>
        <description>E&amp;F CRM Project. Sets additional info about Remitter</description>
        <label>E&amp;F Remitter details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EF_SIS_Code_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>E&amp;F CRM Project. Used to verify if the E&amp;F SIS Code has been verified/provided by SIS team</description>
        <label>SIS Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EF_SIS_Code__c</fullName>
        <description>E&amp;F SIS Code. Specific for them. Sometimes does not match the SIS Member Code</description>
        <label>SIS 3-Digit Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_SIS_Designator__c</fullName>
        <description>E&amp;F SIS Designator. Most of the times the same as Airline Designator, but sometimes specific value for E&amp;F</description>
        <label>SIS 2-Letter Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_SIS_Location_ID__c</fullName>
        <description>E&amp;F Project. Location ID to track locations from SIS. Text field can accpet values Main, and numbers  from 1 to 99.
Val. Rule to check format.</description>
        <inlineHelpText>SIS Location ID just accepts values Main, and numbers from 1 to 99</inlineHelpText>
        <label>E&amp;F SIS Location ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Status_Additional_Information__c</fullName>
        <description>E&amp;F CRM Project 
(EF-864) Add airline status details. 
when E&amp;F Status gets inactive, this field can hold information about why the account got innactive</description>
        <label>E&amp;F Status Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EF_Status__c</fullName>
        <description>E&amp;F CRM Project Field to set the (EF-864) Add airline status details.
Controlling picklist of E&amp;F Sub-Status Account</description>
        <label>E&amp;F Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_SubStatus__c</fullName>
        <label>E&amp;F Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EF_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bankrupt</fullName>
                </value>
                <value>
                    <fullName>Ceased Operations</fullName>
                </value>
                <value>
                    <fullName>Chapter 11</fullName>
                </value>
                <value>
                    <fullName>Liquidated</fullName>
                </value>
                <value>
                    <fullName>No Longer Bill</fullName>
                </value>
                <value>
                    <fullName>No Longer Client</fullName>
                </value>
                <value>
                    <fullName>Sanctioned</fullName>
                </value>
                <value>
                    <fullName>Chapter 7</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EF_Type__c</fullName>
        <description>E&amp;F CRM Project. (EF-1042) Flag an account as an E&amp;F account
An account should have a field to indicate if it&apos;s an E&amp;F client or Operator or Supplier</description>
        <label>E&amp;F Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;F Client</fullName>
                </value>
                <value>
                    <fullName>E&amp;F Operator</fullName>
                </value>
                <value>
                    <fullName>E&amp;F Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email at Account level</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAXNational__c</fullName>
        <description>Used to capture and display National FAX number on portal -&gt; full International Number stored in FAX field</description>
        <label>FAX National</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field_Head_Office__c</fullName>
        <label>Headquarter / Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarter</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fin_statements_submission_deadline__c</fullName>
        <label>Fin. statements submission deadline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Assessment_Points__c</fullName>
        <description>Number of points obtained on the financial assessment (only for Hong Kong and Macao)</description>
        <label>Financial Assessment Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Review_Result__c</fullName>
        <description>Used to copy the last one from the case IATA FINANCIAL REVIEW IFAP</description>
        <label>Last Financial Review Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End__c</fullName>
        <description>Financial Year End</description>
        <label>Financial Year End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDI_status__c</fullName>
        <description>Used for saving the current GDI status</description>
        <label>GDI status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDP_Location_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDP Location Type</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDP_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDP Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDS__c</fullName>
        <description>AGTD - Amadeus
CMAS - Kiu System
WSPN - Travelport (Worldspan)
GDSL - Travelport (Galileo)
UALA - Travelport ( Apollo)
FLGX - Farelogix
RESI - Resiber
SABR - Sabre
ABAC - ABACUS
MINS - Travelsky
SITA - SITA
STRA - SIRENA
AXSS - AXESS
INFI - INFINI
TOPAS - Topas
DERD - DEUTSCHE REISEBURO
KOTI - KOTIS TRAVEL INFO SE</description>
        <inlineHelpText>ABAC-ABACUS
AGTD-Amadeus
AXSS-AXESS
CMAS-Kiu System
DERD-DEUTSCHE REISEBURO
FLGX-Farelogix
GDSL-Galileo
INFI-INFINI
KOTI-KOTIS TRAVEL INFO
MINS-Travelsky
RESI-Resiber
SABR-Sabre
SITA-SITA
STRA-SIRENA
TOPAS-Topas
UALA-Apollo
WSPN-Worldspan</inlineHelpText>
        <label>GDS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABAC</fullName>
                </value>
                <value>
                    <fullName>AGTD</fullName>
                </value>
                <value>
                    <fullName>AXSS</fullName>
                </value>
                <value>
                    <fullName>CMAS</fullName>
                </value>
                <value>
                    <fullName>DERD</fullName>
                </value>
                <value>
                    <fullName>FLGX</fullName>
                </value>
                <value>
                    <fullName>GDSL</fullName>
                </value>
                <value>
                    <fullName>INFI</fullName>
                </value>
                <value>
                    <fullName>KOTI</fullName>
                </value>
                <value>
                    <fullName>MINS</fullName>
                </value>
                <value>
                    <fullName>RESI</fullName>
                </value>
                <value>
                    <fullName>SABR</fullName>
                </value>
                <value>
                    <fullName>SITA</fullName>
                </value>
                <value>
                    <fullName>STRA</fullName>
                </value>
                <value>
                    <fullName>TOPAS</fullName>
                </value>
                <value>
                    <fullName>UALA</fullName>
                </value>
                <value>
                    <fullName>WSPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_Type__c</fullName>
        <label>GSA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Passenger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSSA_Code_Cargo__c</fullName>
        <label>GSSA Code (Cargo)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geoname_Billing_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geoname Billing City</label>
        <referenceTo>IATA_ISO_City__c</referenceTo>
        <relationshipLabel>Accounts with this Billing City</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geoname_Shipping_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geoname Shipping City</label>
        <referenceTo>IATA_ISO_City__c</referenceTo>
        <relationshipLabel>Accounts with this Shipping City</relationshipLabel>
        <relationshipName>AccountsShipping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Give_SIS_Membership__c</fullName>
        <description>Allow ISS portal users under this account to access to Join SIS e-Invoicing application</description>
        <label>Give SIS Membership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISPA</fullName>
                </value>
                <value>
                    <fullName>ISUA</fullName>
                </value>
                <value>
                    <fullName>TOU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <description>global unique identifier</description>
        <displayFormat>001{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Global ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Guaranteed_amount__c</fullName>
        <description>SARA</description>
        <inlineHelpText>Shows the total amount of the active bank guarantees</inlineHelpText>
        <label>Guaranteed amount</label>
        <summarizedField>Financial_Security__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Financial_Security__c.Security_Status__c</field>
            <operation>equals</operation>
            <value>Active, Close to Expiry Date</value>
        </summaryFilterItems>
        <summaryForeignKey>Financial_Security__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HQ_ASP_Effective_Date__c</fullName>
        <formula>IF (
  ParentId &lt;&gt; null,
  Parent.ASP_Effective_Date__c,
  ASP_Effective_Date__c
)</formula>
        <label>HQ ASP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HQ_Due_Dilingence_Status__c</fullName>
        <description>Displays the Due Diligence status of the Parent Account (if the parent exists).</description>
        <formula>IF (
  ISBLANK( ParentId ),
  TEXT( Due_Diligence_Status__c ),
  TEXT( Parent.Due_Diligence_Status__c )
)</formula>
        <label>HQ Due Dilingence Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for cleaning</description>
        <label>Has Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for cleaning</description>
        <label>Has Campaigns</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for cleaning</description>
        <label>Has Cases</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for cleaning</description>
        <label>Has Contacts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Financial_Review_Open_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Financial Review Open Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for cleaning</description>
        <label>Has Opportunities</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_a_Financial_Assessment_Contact_Formu__c</fullName>
        <description>If true, then one of the related contacts, or one of the related contacts of the accounts under the hierarchy, is a financial assessment contact, otherwise it&apos;s false</description>
        <formula>OR( Has_a_Financial_Assessment_Contact__c, Has_a_Financial_Assessment_Contact_Sum__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has a financial assessment contact under this account or any from the hierarchy</inlineHelpText>
        <label>Has FA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_a_Financial_Assessment_Contact_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, then one of the accounts under the hierarchy has a financial assessment contact, otherwise it&apos;s false</description>
        <inlineHelpText>Has a Financial Assessment Contact under this hierarchy</inlineHelpText>
        <label>Has a FA Contact (under hierarchy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_a_Financial_Assessment_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, then one of the related contacts is a financial assessment contact, otherwise it&apos;s false</description>
        <inlineHelpText>Has a Financial Assessment Contact in this account</inlineHelpText>
        <label>Has FA Contact (This account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_an_Administrator_User_Portal_Formula__c</fullName>
        <formula>OR( Has_an_Administrator_User_Portal__c, Has_an_Administrator_User_Portal_Sum__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has an admin user under this account or any from the same hierarchy</inlineHelpText>
        <label>Has an Admin Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_an_Administrator_User_Portal_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has an Admin User Portal under hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_an_Administrator_User_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Search in all related contacts and if any of them is an Admin User portal this value is checked</description>
        <inlineHelpText>Has an admin contact under this account</inlineHelpText>
        <label>Has an Admin Portal User (This account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_cases_from_last_2_years__c</fullName>
        <description>data cleansing</description>
        <label>Has cases from last 2 years</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Higher_Level_Customer__c</fullName>
        <description>Top parent SAP customer number for this account. Manually populated by the AMP team.</description>
        <label>Higher Level Customer (SAP)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holds_FS_first_call_letter__c</fullName>
        <description>used in SIDRA process to flag the cases where first call letter is required</description>
        <label>Holds FS requiring first call letter</label>
        <summaryFilterItems>
            <field>Financial_Security__c.Security_Status__c</field>
            <operation>equals</operation>
            <value>Close to Expiry Date, Active, Expired</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Financial_Security__c.First_Call_Letter_required1__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Financial_Security__c.Two_months_passed_expiry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Financial_Security__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IATACode__c</fullName>
        <label>IATA Code</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATATrainingUrl__c</fullName>
        <label>Training Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IATA_Area__c</fullName>
        <description>Area of the account based on IATA&apos;s areas (Americas, EMEA, Asia Pacific, China)</description>
        <label>IATA Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Americas</fullName>
                </value>
                <value>
                    <fullName>2 - EMEA</fullName>
                </value>
                <value>
                    <fullName>3 - Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>4 - China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_ISO_Billing_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Billing State</label>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>Accounts (ISO Billing State)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_ISO_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Shipping_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Shipping Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Accounts (ISO Shipping Country)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Shipping_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Shipping State</label>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>Accounts (ISO Shipping State)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IATA Member Airline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATA_Membership_History__c</fullName>
        <label>IATA Membership History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IATA_Membership_status_all_levels__c</fullName>
        <formula>if(RecordTypeId = &quot;012w0000000QBMX&quot;, text(Membership_status__c), if( RecordTypeId =&quot;012w0000000QBMY&quot;, text(Parent.Membership_status__c),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Membership status (all levels)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_code_Lenght__c</fullName>
        <formula>LEN( IATACode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA code Lenght</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>